--- a/rpi3/TODO.txt
+++ b/rpi3/TODO.txt
@@ -1,2 +1,3 @@
-Will use sed to change config.txt in raspi image
-to remove BT and WiFi 
+1. Will use sed to change config.txt in raspi image
+    to remove BT and WiFi 
+2. Get kernel and dtb from git ???
